@@ -86,7 +86,7 @@ void getStats(int port, unsigned char*buf, unsigned char*pre, int*len) {
 
 void err(char*buf) {
     rte_exit(EXIT_FAILURE, "%s\n", buf);
-    abort();
+    _exit(1);
 }
 
 
