@@ -39,7 +39,7 @@ void getStats(int port, unsigned char*buf, unsigned char*pre, int*len) {
 
 void err(char*buf) {
     printf("%s\n", buf);
-    abort();
+    _exit(1);
 }
 
 
