@@ -21,7 +21,7 @@
 
 void err(char*buf) {
     printf("%s\n", buf);
-    abort();
+    _exit(1);
 }
 
 void warn(char*buf) {
