@@ -15754,3 +15754,6 @@ qc pass: dhcp with excluded address
 ---------------------------------- 2024-05-12 09:46:25 24.5.12
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-05-12 11:49:52 24.5.12
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
